Come?ando o capitulo da Geran??o de Malhas.

--- a/mestrado.tex
+++ b/mestrado.tex
@@ -46,10 +46,9 @@
 \begin{document}
 
 \include{pre}   % Capa, prefácio e afins
-\include{cap1}	% Capítulo 1: Introdução
-\include{cap2}	% Capítulo 2: Complexidade Descritiva
-\include{cap3}	% Capítulo 3: Classes de Complexidade Probabilisticas
-\include{cap4}	% Capítulo 4: Logicas Probabilisticas
+\include{cap1}	% Capítulo 1: IntroduçãoC
+\include{cap2}	% Capítulo 2: Particionamento de domínios
+\include{cap3}	% Capítulo 3: Geração de Malhas
 \include{final}	% Capítulo Final: Considerações Finais
 
 % Formato da bibliografia
