Avan?o de fronteira escrito.

--- a/cap1.tex
+++ b/cap1.tex
@@ -18,7 +18,7 @@ A segunda etapa seria a geração da malha em cada um dos novos domínios. Qualq
 
 Para esse trabalho estou propondo uma técnica de geração de malha por avanço de fronteira por particionamento do domínio em paralelo. O foco da técnica é a subdivisão dos domínios e não a geração da malha. O algoritmo de avanço de fronteira que utilizamos para gerar malha está em \cite{bib:Miranda99} e \cite{bib:Cavalcante-Neto01}.
 
-O restante deste trabalho está dividido em quatro seções. No capítulo seguinte faz uma apresentação do que se tem feito atualmente na área de subdivisão de domínios e lá mostraremos mais do método que estamos propondo. O capítulo 3 descreve o que são triangulações as técnicas para geração das mesmas. Finalmente, no capítulo 4 vamos definir a linha de estudo além do cronograma do trabalho.
+O restante deste trabalho está dividido em quatro seções. No capítulo seguinte faz uma apresentação do que se tem feito atualmente na área de subdivisão de domínios e lá mostraremos mais do método que estamos propondo. O capítulo 3 descreve os algoritmos existentes para geração de malhas bidimensionais, mais precisamente triangulações. Finalmente, no capítulo 4 vamos definir a linha de estudo além do cronograma do trabalho.
 
 %\section{Incluindo citações}\label{intro:historico}
 
