--- a/mestre.bib
+++ b/mestre.bib
@@ -17,8 +17,16 @@
  year      = {2008}
 }
 
+@MASTERSTHESIS{bib:Freitas10,
+AUTHOR = {Freitas, M. O.},
+TITLE = {Gera\c c\~ao em Paralelo de Malhas Triangulares por Avan\c{c}o de Fronteira com Particionamento por Decomposi\c c\~ao Espacial Recursiva},
+SCHOOL = {UNIVERSIDADE FEDERAL DO CEAR\'A},
+YEAR = {2010},
+type = {Mestrado}
+}
 
-
+ title  = {Simula\c c\~ao Auto-Adaptativa Baseada em Enumera\c c\~ao Espacial Recursiva de Modelos Bidimensionais de Elementos Finitos},
+ school = {Pontif\'icia Universidade Cat\'olica do Rio de Janeiro},
 
 
 @InProceedings{bib:Persson04,
