Gera??o de malha por Delaunay feito.

--- a/cap3.tex
+++ b/cap3.tex
@@ -46,3 +46,30 @@ Enquanto houver arestas na fronteira um algoritmo nessa categoria irá proceded 
  Pelo fato da fronteira ser sempre respeitada, os algoritmos de avanço de fronteira têm facilidade em tratar regiões descontínuas, ou por conterem buracos, ou por serem regiões separadas. Como os elementos mais próximos da borda são gerados primeiro, eles irão ter em geral uma boa qualidade. A boa qualidade da malha gerada provem estabilidade e precisão na aplicação de métodos numéricos (como os métodos dos elementos finitos).
 
 Porém, nem sempre todos os elementos gerados terão boa qualidade. Ao contrário dos elementos mais próximos da borda, os elementos mais internos à malha nem sempre teão boa qualidade devido à região torna-se menor a medida que a fronteira avança. Geralmente uma técnica de suavização ou otimização é aplicada na malha resultante do algoritmo para tratar esses casos.
+
+\section{Delaunay}
+
+Essa é um técnica bastante conhecida na área de geração de malhas, a origem do nome vem do matemático russo Boris Delaunay. A entrada para esse problema é um conjunto de pontos, nesse caso não é utilizado os pontos de Steiner para formar os triângulos.
+
+O critério de Delaunay para a formação dos triângulos é que não exista nenhum outro ponto dentro do círculo que passa pelos três pontos desse triângulo, esse critério pode ser chamado também de “esfera vazia” (o circuncírculo desse triângulo, Figura~\ref{fig:imagem8}). O critério de Delaunay em si não se constitui num método de geração de malhas, mas é uma forma de saber onde os pontos devem estar localizados no espaço.
+
+ \begin{figure}[htbp]
+     \centering
+     \includegraphics[width=1\textwidth]{imagem8}
+     \caption{a) critério de Delaunay falhando para os dois triângulos. b) Triangulação valida respeitando o critério de Delaunay.} 
+     \label{fig:imagem8}
+ \end{figure}
+
+A malha gerada por Delaunay visa maximizar os ângulos internos dos triângulos gerados. Ou seja, dada uma aresta da triangulação de Delaunay, o ponto que forma o maior ângulo com essa aresta é o ponto que formará um triângulo de Delaunay com os outros 2 pontos desta aresta.
+
+Existem dois tipos de algoritmos de Delaunay. No primeiro tipo, encontra-se uma aresta que faz parte da triangulação, em geral é selecionada uma aresta que pertence ao fecho convexo como primeira aresta. A partir da primeira aresta é encontrado o ponto que formará um triângulo de Delaunay. Assim, com as novas arestas, encontra-se novos triângulos, em um algoritmo parecido com o de avanço de fronteira. No segundo tipo, a entrada é uma malha triangular não necessáriamente de Delaunay e se modifica essa malha (de apenas um subconjunto de pontos da entrada) pré-existente (Figura~\ref{fig:imagem9}).
+
+ \begin{figure}[htbp]
+     \centering
+     \includegraphics[width=1\textwidth]{imagem9}
+     \caption{Triangulação por inserção de pontos. \cite{bib:Freitas10}} 
+     \label{fig:imagem9}
+ \end{figure}
+
+ Dependendo da disposição dos pontos da entrada a triangulação final pode não têr boa qualidade, gerando instabilidade em métodos numéricos. Uma alternativa para melhorar essa malha é fazer refinamentos e otimizações, que fazem uso de pontos de Steiner, são utilizados para se melhorar a qualidade da malha.
+
