--- a/cap1.tex
+++ b/cap1.tex
@@ -10,35 +10,18 @@
 
 O maior desafio atual é desenvolver técnicas que possuam boa escalabilidade, ou seja, ter um aumento no desempenho sob carga quando mais recursos forem disponíveis. Ao mesmo tempo buscamos obter resultados tão bons quanto os resultados do algoritmo sequencial.
 
-Podemos dizer que o trabalho que estamos propondo pode ser dividido em duas etapas. A primeira consiste em receber a entrada e dividi-la em pedaços que possam ser tradados como novos domínios. Todos esses pedaços por sua vez possuem a quantidade de carga aproximadamente iguais.
+Nosso trabalho trata de malhas bidimensionais, mais precisamente triangulações. Essas malhas são bastante utilizada em diversas áreas e aplicaçãções. Na engenharia é bastante utilizado em métodos de elementos finitos(MEF). Em computação gráfica é muito utilizado para a visualização e modelagem objetos e ambientes. Há usos também em  sistemas de informações geográficas e projetos assistidos por computadores para a modelagem de objetos industriais.
 
-Existem vários pesquisadores estudando novas formas de subdividir domínios para geração de malhas tanto tridimensionais como bidimensionais. A técnica proposta uUtiliza uma \textit{quadtree} para estimar a carga de cada subdomínio que for gerado para se obter um bom balanceamento de carga entre os processadores.
+A qualidade da malha gerada é bastante importante. Em MEFs por exemplo, a qualidade de dos elementos (os polígonos, em malhas bidimensionais) são de extrema importância pois a se malha tiver uma grande quantidade de elementos ruins, é possível que o MEF não convirja. Por necessitar de malhas bastante refinadas, é comum que MEFs usem malhas grandes, com milhões de elementos.
 
-A segunda etapa seria a geração da malha em cada um dos novos domínios. Qualquer algoritmo de triangulação dado uma borda como entrada pode ser utilizado, inclusive pode ser empregado algoritmos diferentes nos subdomínios. Além da triangulação tem que ser feito a junção das diversas malhas geradas em uma só.
+Em geração de malha para aplicações científicas é preciso ter uma boa técnica para garantir que os elementos gerados serão de boa qualidade, ou seja, no caso bidimensional que os triângulos sejam bons. Pode-se dizer que um triângulo é bom quando ele é quase equilátero, caso contrário, ele pode ser ruim (fig.~\ref{fig:imagem10}).
 
-Para esse trabalho estou propondo uma técnica de geração de malha por avanço de fronteira por particionamento do domínio em paralelo. O foco da técnica é a subdivisão dos domínios e não a geração da malha. O algoritmo de avanço de fronteira que utilizamos para gerar malha está em \cite{bib:Miranda99} e \cite{bib:Cavalcante-Neto01}.
+ \begin{figure}[htbp]
+     \centering
+     \includegraphics[width=0.7\textwidth]{imagem10}
+     \caption{Triângulo bom e triângulos ruins} 
+     \label{fig:imagem10}
+ \end{figure}
 
 O restante deste trabalho está dividido em quatro seções. No capítulo seguinte faz uma apresentação do que se tem feito atualmente na área de subdivisão de domínios e lá mostraremos mais do método que estamos propondo. O capítulo 3 descreve os algoritmos existentes para geração de malhas bidimensionais, mais precisamente triangulações. Finalmente, no capítulo 4 vamos definir a linha de estudo além do cronograma do trabalho.
 
-%\section{Incluindo citações}\label{intro:historico}
-
-% O comando \label{nome} define o marcador da parte especificada.
-% Você pode citar esta seção usando o comando \ref{nome}.
-% O "~" evita uma quebra de linha entre as palavras.
-% O Capítulo~\ref{intro} é uma introdução ao contexto do projeto.
-% Vou exemplificar alguns comandos básicos e úteis para uma dissertação como incluir citações \citep{Sand-Jensen2007} ou ``aspas''.
-% % Como o % representa um comentário e não é compilado, para fazê-lo aparecer no texto você precisa colocar uma "\" antes, como abaixo.
-% Apenas \unit[4]{\%} do texto está contido em subsubseções.
-% 
-% % Veja mais formas de fazer citações no texto da documentação do natbib.
-% O \texttt{natbib} é bastante flexível \citep[ver detalhes em][]{Kirk2008}.
-% \citet{Emlet1987} mostra outro modo de citar trabalhos no texto e como grafar o nome das espécies \emph{Drosophila melagonaster} e \subde\ usando o comando \texttt{$\backslash$emph} e um comando customizado, respectivamente.
-% % Comandos como o utilizado para incluir o nome da espécie (subde e subsus) devem ser seguidos de uma \ para inserir um espaço antes da próxima palavra.
-% % Esta \ não precisa ser utilizada quando o comando é seguido de ponto ou vírgula.
-% \citet{Day2006} não usaram papilas de \subsus.
-% % O pacote icomma permite usar a vírgula como separador decimal, já que o comportamento padrão do LaTeX é inserir um espaço maior após uma vírgula.
-% O resultado de \subsus\ é 22,2.
-
-%\section{Referenciando seções do texto}\label{intro:contexto}
-
-%Mencionei na seção~\ref{intro:historico} como citar um capítulo, agora podemos citar o Capítulo~\ref{cap2}.
