--- a/final.tex
+++ b/final.tex
@@ -1,19 +1,18 @@
 \pagestyle{empty}
 \cleardoublepage
 \pagestyle{fancy}
-\chapter{Direções Futuras}\label{cap5}
+\chapter{Direções Futuras}\label{cap4}
 
-Neste capítulo vamos indicar alguns temas possíveis para serem abordados na dissertação.
-Podemos aproveitar os resultados atuais da Complexidade Descritiva com lógicas convencionais para guiar na tentativa de mostrar resultados semelhantes para lógicas probabilísticas. Resolvemos estudar Lógicas Probabilísticas de Primeira Ordem pois já sabemos que $FO = LH$ \cite{immerman99}, $\exists SO = NP$ e que as classes de complexidade probabilísticas $RP$, $ZPP$ e $BPP$ estão entre as classes $P$ e $NP$. Com isso, buscamos mostrar a relação entre lógicas probabilísticas e as classes de complexidade computacional probabilísticas mencionadas. Outro tipo de lógica probabilística que existe adiciona probabilidade no valor verdade da fórmulas. Poderíamos investigar essas lógicas e buscar resultados de complexidade descritiva para elas. Outra direção seria adicionar probabilidade em outras lógicas conhecidas que já têm resultados em Complexidade Descritiva afim de obter resultados que relacionem com as classes de complexidade probabilísticas. Por exemplo, sabemos que a lógica de primeira ordem com operador de menor ponto fico $FO(FLP)$ e a lógica de Horn de segunda ordem caracterizam a classe de complexidade $P$ \cite{immerman99}. Poderíamos investigar se já existem versões probabilísticas dessas lógicas ou até mesmo adicionar probabilidade com a finalidade de capturar alguma classe de complexidade probabilística. Também existem resultados de complexidade descritiva para algumas lógicas modais \cite{Cibele2009} e o mesmo poderia ser feito com suas versões probabilísticas \cite{BrazdilFKK08, Heifetz1998}.
+Foi feito um estudo nessa área de geração de malhas voltado para a subdivisão de domínios bidimensionais. Já foi dado início ao desenvolvimento de uma técnica de geração de malha baseada num particionamento utilizando \textit{quadtree}.
+
+Podemos dizer que o trabalho que estamos propondo pode ser dividido em duas etapas. A primeira consiste em receber a entrada e dividi-la em pedaços que possam ser tradados como novos domínios. Todos esses pedaços por sua vez possuem a quantidade de carga aproximadamente iguais.
+
+Existem vários pesquisadores estudando novas formas de subdividir domínios para geração de malhas tanto tridimensionais como bidimensionais. A técnica proposta utiliza uma \textit{quadtree} para estimar a carga de cada subdomínio que for gerado para se obter um bom balanceamento de carga entre os processadores.
+
+A segunda etapa seria a geração da malha em cada um dos novos domínios. Qualquer algoritmo de triangulação dado uma borda como entrada pode ser utilizado, inclusive pode ser empregado algoritmos diferentes nos subdomínios. Além da triangulação tem que ser feito a junção das diversas malhas geradas em uma só.
+
+Para esse trabalho estou propondo uma técnica de geração de malha por avanço de fronteira por particionamento do domínio em paralelo. O foco da técnica é a subdivisão dos domínios e não a geração da malha. O algoritmo de avanço de fronteira que utilizamos para gerar malha está em \cite{bib:Miranda99} e \cite{bib:Cavalcante-Neto01}.
 
 \section{Cronograma}
 Nesta seção temos o cronograma de estudo e trabalho para conclusão da dissertação de mestrado.
 
-\begin{itemize}
- \item Março: Tentar provar os resultados e estudar outras abordagens.
- \item Abril: Participação no Unilog e apresentar a pré-proposta na PUC e UFRJ.
- \item Maio: Incorporação de sugestões ao trabalho.
- \item Junho a Agosto: Escrever a proposta com possíveis resultados.
- \item Agosto a Novembro: Escrever artigo com possíveis resultados.
- \item Novembro a Fevereiro: Escrever dissertação com resultados obtidos.
-\end{itemize}
