--- a/final.tex
+++ b/final.tex
@@ -16,3 +16,9 @@ Para esse trabalho estou propondo uma técnica de geração de malha por avanço
 \section{Cronograma}
 Nesta seção temos o cronograma de estudo e trabalho para conclusão da dissertação de mestrado.
 
+ \begin{figure}[htbp]
+     \begin{center}
+     \includegraphics[width=1.1\textwidth]{tabela}
+     \label{fig:tabela}
+     \end{center}
+ \end{figure}
