--- a/mestre.bib
+++ b/mestre.bib
@@ -25,8 +25,16 @@ YEAR = {2010},
 type = {Mestrado}
 }
 
- title  = {Simula\c c\~ao Auto-Adaptativa Baseada em Enumera\c c\~ao Espacial Recursiva de Modelos Bidimensionais de Elementos Finitos},
- school = {Pontif\'icia Universidade Cat\'olica do Rio de Janeiro},
+@Book{bib:CarvalhoFigueiredo91,
+ author    = {CARVALHO, P. C. P. and FIGUEIREDO, L. H. de},
+ title     = {Introdução à Geometria Computacional},
+ publisher = {IMPA - Instituto Nacional de Matemática Pura e Aplicada},
+ year      = {1991},
+ edition   = {1nd},
+}
+
+
+
 
 
 @InProceedings{bib:Persson04,
